tests/NormalTests/paczka1/fuzzy1/29121278.err
Error in line 9: vUyb4 S62 70,8
Error in line 4: HRfk31Gps A364 75,6
Error in line 13: A593 S62 42,8
Error in line 27: MBQ8L5M S717 65,1
Error in line 32: qL7tVWekK S62 12,4
